[package]
name = "cachesim"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Halifuda/cachesim/"
description = "a scalable cache simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
